--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TinkoffLab2023</string>
     <string name="settings">Настройки</string>
+
+    <string name="base_date">99.99.9999</string>
 </resources>
