--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,28 @@
 <resources>
-    <string name="app_name">TinkoffLab2023</string>
-    <string name="settings">Настройки</string>
+    <string name="app_name" translatable="false">DotaStats</string>
+    <string name="settings">Settings</string>
+    <string name="favorite">Favorite</string>
+    <string name="search">Search</string>
+    <string name="overview">Overview</string>
 
-    <string name="base_date">99.99.9999</string>
+    <string name="base_date" translatable="false">99.99.9999</string>
+    <string name="hero">Hero</string>
+    <string name="player">Player</string>
+    <string name="kill_word">k</string>
+    <string name="death_word">d</string>
+    <string name="assist_word">a</string>
+    <string name="victory">Victory</string>
+    <string name="dire" translatable="false">Dire</string>
+    <string name="radiant" translatable="false">Radiant</string>
+    <string name="latest_matches">Latest matches</string>
+    <string name="most_played_heroes">Most played heroes</string>
+    <string name="mathes">Matches</string>
+    <string name="heroes">Heroes</string>
+    <string name="main_search_hint">Player nickname or Match ID</string>
+    <string name="test">Test</string>
+    <string name="base_num" translatable="false">999</string>
+    <string name="last_played">Last played:</string>
+    <string name="win_slash_loss_big">Win/Loss</string>
+    <string name="win_rate">Win rate</string>
+
 </resources>
