--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">DotaStats</string>
     <string name="settings">Settings</string>
-    <string name="favorite">Favorite</string>
+    <string name="favorite">Favorites</string>
     <string name="search">Search</string>
     <string name="overview">Overview</string>
 
@@ -46,5 +46,8 @@
     <string name="net">NET</string>
     <string name="outcome">Outcome:</string>
     <string name="content">Content</string>
+    <string name="account">Account</string>
+    <string name="anonym">Anonymous</string>
+    <string name="players">Players</string>
 
 </resources>
