--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="test">Test</string>
     <string name="base_number_big" translatable="false">999</string>
     <string name="last_played">Last played:</string>
-    <string name="win_slash_loss_big">Win/Loss</string>
+    <string name="win_slash_loss_big" translatable="false">Win/Loss</string>
     <string name="win_rate">Win rate</string>
     <string name="matches">Matches</string>
     <string name="win_percent">Win %</string>
@@ -58,5 +58,17 @@
     <string name="radiant_victory">Radiant victory</string>
     <string name="dire_victory">Dire victory</string>
     <string name="details">Details</string>
+    <string name="lvl" translatable="false">LVL:</string>
+    <string name="gold">Gold:</string>
+    <string name="estimate">Estimate</string>
+    <string name="herald">Herald</string>
+    <string name="guardian">Guardian</string>
+    <string name="crusader">Crusader</string>
+    <string name="archon">Archon</string>
+    <string name="legend">Legend</string>
+    <string name="ancient">Ancient</string>
+    <string name="divine">Divine</string>
+    <string name="immortal">Immortal</string>
+    <string name="calibration">Calibration</string>
 
 </resources>
